# evdev-proxy

./: CMakeLists.txt  main.cpp  shell.nix
